# raylib_boilerplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  make
docs/: refactor-checklist.md
src/: main.c
src/clock/: timer.c  timer.h
src/core/: README.md  build.h  config.h  panic.h  window.h
src/core/log/: log.c  log.h  log_api.h  logger.h
src/game/: README.md  game.c  game.h  global_state_input.c  input_dispatch_handler.h  states.c  states.h
src/game/global_input_handlers/: debug.c  debug.h  global_input_handlers.h
src/game/settings/: keybinds.h  settings.c  settings.h
src/game/states/: input_dispatch_handler.h
src/game/states/boot/: boot.c  boot.h
src/game/states/boot/input_handlers/: press_any_key.c  press_any_key.h
src/game/states/in_game/: in_game.c  in_game.h  in_game_state_dispatch.c  in_game_state_dispatch.h
src/game/states/in_game/input_handlers/: pause.c
src/game/states/main_menu/: main_menu.c  main_menu.h
src/game/states/main_menu/input_handlers/: menu_input.c  menu_input.h
src/game/states/paused/: paused.c  paused.h
src/game/states/paused/input_handlers/: paused_input.c  paused_input.h
src/game/states/settings/: settings.c  settings.h
src/game/states/settings/input_handlers/: settings_input.c  settings_input.h
src/game/states/shutdown/: shutdown.c  shutdown.h
src/game/ui/fonts/: fonts.c  fonts.h
src/input/: README.md  input.c  input.h
src/input/platform/: input_raylib.c  input_raylib.h  input_raylib_helpers.h
src/render/: README.md  game_renderer.c  game_renderer.h  render_api.h
src/render/debug_overlay/: debug_overlay.c  debug_overlay.h
src/render/global/debug_overlay/: debug_overlay.c
src/render/window/: window.c  window.h
src/util/: README.md
src/util/files/: file.c  file.h
src/util/math/: graphics.c  graphics.h
src/world/: world.c  world.h
